--- a/styles/pages/Index.module.scss
+++ b/styles/pages/Index.module.scss
@@ -1,3 +1,22 @@
 .container {
   padding: 64px;
+
+  > form {
+    display: flex;
+    gap: 8px;
+    height: 32px;
+
+    > input {
+      width: 200px;
+    }
+  }
+
+  > pre {
+    margin-top: 32px;
+    padding: 16px;
+    border-radius: 16px;
+    background: #282828;
+    color: #fff;
+    overflow: scroll;
+  }
 }
